--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -1,5 +1,5 @@
 .header {
-    background-image: url(../../img/hero.jpg);
+    background-image: url(/img/hero.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
