--- a/scss/main.css
+++ b/scss/main.css
@@ -158,7 +158,7 @@ body {
 }
 
 .header {
-  background-image: url(/img/hero.jpg);
+  background-image: url(../img/hero.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
