--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -34,7 +34,7 @@ body {
 .heading {
     font-family: var(--first-font);
     font-weight: 400;
-    font-size: 40px;
+    font-size: 2.5rem;
     text-align: center;
     color: var(--black);
     @media only screen and (max-width: 768px) {
