--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,3 +8,7 @@
 @import './blocks/book1';
 @import './blocks/secondary';
 @import './blocks/book2';
+@import './blocks/articles';
+@import './blocks/press';
+@import './blocks/about';
+@import './blocks/contact';
