--- a/scss/main.css
+++ b/scss/main.css
@@ -267,152 +267,6 @@ body {
   }
 }
 
-.best {
-  padding: 52px 0 62px;
-}
-
-.best__heading {
-  margin-bottom: 2.875rem;
-}
-
-.bestSwiper {
-  overflow: hidden;
-}
-
-.best__swiper-wrapper {
-  position: relative;
-  margin-bottom: 3.875rem;
-}
-
-.best__swiper-left div:first-of-type {
-  display: flex;
-  align-items: center;
-  gap: 0.75rem;
-}
-.best__swiper-left span {
-  font-family: var(--second-font);
-  font-size: 0.875rem;
-  line-height: 130%;
-  color: var(--black);
-  opacity: 0.64;
-}
-.best__swiper-left h3 {
-  font-size: 1.75rem;
-  line-height: 130%;
-  text-transform: uppercase;
-  padding-top: 0.75rem;
-}
-
-.best__swiper-text {
-  padding-top: 1.063rem;
-  display: grid;
-  grid-template-columns: 8fr 2fr 2fr;
-}
-
-.best__swiper-center {
-  display: grid;
-  gap: 11px;
-  font-size: 0.875rem;
-  line-height: 110%;
-  font-family: var(--second-font);
-}
-.best__swiper-center span {
-  opacity: 0.64;
-}
-
-.best__swiper-right {
-  justify-self: flex-end;
-}
-.best__swiper-right a {
-  color: var(--red);
-  text-decoration: underline;
-  text-underline-offset: 3px;
-  -webkit-text-decoration-skip-ink: none;
-          text-decoration-skip-ink: none;
-}
-
-.best__swiper-arrows {
-  position: absolute;
-  top: 40%;
-  z-index: 9;
-  display: flex;
-  width: 100%;
-  justify-content: space-between;
-}
-.best__swiper-arrows div {
-  cursor: pointer;
-}
-@media only screen and (max-width: 768px) {
-  .best__swiper-arrows {
-    display: none;
-  }
-}
-
-.best__swiper-left__arrow {
-  transform: translate(-40px, -10px);
-}
-
-.best__swiper-right__arrow {
-  transform: translate(40px, -10px);
-}
-
-.bestSwiper2__content {
-  margin-top: 1rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-}
-
-.bestSwiper2__name {
-  display: flex;
-  gap: 12px;
-  align-items: center;
-  margin-left: 16px;
-}
-.bestSwiper2__name h3 {
-  font-size: 1.25rem;
-  text-transform: uppercase;
-}
-
-.bestSwiper2__tech {
-  text-align: end;
-  display: grid;
-  gap: 0.75rem;
-}
-.bestSwiper2__tech span {
-  opacity: 0.64;
-  font-family: var(--second-font);
-  font-weight: 400;
-  font-size: 0.875rem;
-  line-height: 110%;
-}
-
-.best__second-swiper {
-  position: relative;
-}
-
-.best__second-arrows {
-  display: flex;
-  justify-content: space-between;
-  position: absolute;
-  width: 100%;
-  z-index: 9;
-  top: 40%;
-}
-@media only screen and (max-width: 768px) {
-  .best__second-arrows {
-    display: none;
-  }
-}
-
-.best__second-left {
-  transform: translate(-40px, -10px);
-}
-
-.best__second-right {
-  transform: translate(40px, -10px);
-}
-
 .premium {
   padding: 53px 0 96px;
   background-color: var(--beige);
@@ -1289,4 +1143,106 @@ body {
     gap: 1rem;
     font-size: 0.625rem;
   }
+}
+
+.mob-menu {
+  height: 100vh;
+  width: 100%;
+  background: var(--red);
+  top: 0;
+  position: absolute;
+  z-index: 99;
+  background-image: url(../img/mob-bg.svg);
+  background-repeat: no-repeat;
+  background-position: bottom;
+  background-size: contain;
+  transform: translateX(100%);
+  transition: 0.5s ease-in-out;
+}
+.mob-menu .container {
+  padding: 0 1.5rem;
+  height: 100%;
+}
+
+.mob-menu__content {
+  padding: 1.875rem 0 2.875rem;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.mob-menu-icons {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 9.75rem;
+}
+
+.mob-logo {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+}
+.mob-logo p {
+  color: var(--white);
+  font-size: 0.875rem;
+}
+
+.mob-list {
+  text-align: center;
+  display: grid;
+  gap: 1.5rem;
+}
+
+.mob-item {
+  opacity: 0.64;
+  display: grid;
+  gap: 1rem;
+}
+.mob-item span {
+  font-size: 0.875rem;
+  line-height: 120%;
+  color: var(--white);
+}
+.mob-item a {
+  color: var(--white);
+  font-size: 1.5rem;
+  line-height: 100%;
+  text-transform: uppercase;
+}
+.mob-item:hover {
+  opacity: 1;
+}
+.mob-item:hover .mob-link__wrapper a {
+  background-color: var(--white);
+  color: var(--black);
+}
+
+.mob-link__wrapper a {
+  padding: 0.5rem;
+}
+
+.mob-menu__bottom {
+  margin: 0 auto;
+  text-align: center;
+  flex-grow: 1;
+  margin-top: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  color: var(--white);
+  font-family: var(--second-font);
+  font-weight: 300;
+  font-size: 0.875rem;
+  line-height: 135%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  max-width: 16.563rem;
+}
+.mob-menu__bottom a {
+  color: var(--white);
+  font-weight: 400;
+  font-size: 1rem;
 }/*# sourceMappingURL=main.css.map */
