--- a/scss/main.scss
+++ b/scss/main.scss
@@ -14,3 +14,5 @@
 @import './blocks/contact';
 @import './blocks/footer';
 @import './blocks/mob-menu';
+@import './blocks/map';
+@import './blocks/popup';
