--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -28,6 +28,7 @@
     margin-bottom: 12.188rem;
     @media only screen and (max-width: 768px) {
        grid-template-columns: none;
+       margin-bottom: 5.5rem;
     }
 }
 .footer__form {
@@ -54,7 +55,7 @@
         input {
             opacity: 0.64;
             border-bottom: 1px solid var(--white);
-            padding-bottom: 0.813rem;
+            padding: 0.813rem 0;
             width: 100%;
         }
     }
@@ -89,7 +90,6 @@
     }
 }
 .footer__list {
-    opacity: 0.64;
     display: grid;
     gap: 3.5rem;
     @media only screen and (max-width: 768px) {
@@ -97,6 +97,11 @@
         margin-top: 5.563rem;
         font-size: 0.875rem;
         gap: 2rem 3.5rem;
+    }
+}
+.footer__item {
+    a {
+        color: var(--white);
     }
 }
 .footer__bottom {
