--- a/scss/blocks/_mob-menu.scss
+++ b/scss/blocks/_mob-menu.scss
@@ -30,7 +30,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 9.75rem;
+    // margin-bottom: 9.75rem;
+    margin-bottom: auto;
 }
 .mob-logo {
     display: flex;
@@ -77,10 +78,27 @@
     }
 }
 .mob-menu__bottom {
-    margin: 0 auto;
+    // margin: 0 auto;
+    // text-align: center;
+    // flex-grow: 1;
+    // margin-top: auto;
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: end;
+    // color: var(--white);
+    // font-family: var(--second-font);
+    // font-weight: 300;
+    // font-size: 0.875rem;
+    // line-height: 135%;
+    // width: 100%;
+    // display: flex;
+    // flex-direction: column;
+    // gap: 1rem;
+    // max-width: 16.563rem;
+    margin: auto auto 0;
     text-align: center;
-    flex-grow: 1;
-    margin-top: auto;
+    /* flex-grow: 1; */
+    /* margin-top: auto; */
     display: flex;
     flex-direction: column;
     justify-content: end;
