--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -61,3 +61,11 @@ body {
 .arrow-right {
     transform: translate(40px, -10px);
 }
+.swiper-pagination-bullet-active {
+    background-color: var(--black)!important;
+}
+.swiper-pagination-bullet {
+    background-color: var(--white);
+    opacity: 1;
+    border: 1px solid var(--black)
+}
