--- a/scss/blocks/_articles.scss
+++ b/scss/blocks/_articles.scss
@@ -12,6 +12,7 @@
     margin-bottom: 2.875rem;
     @media only screen and (max-width: 768px) {
         margin-bottom: 1.875rem;
+        text-transform: uppercase;
     }
 }
 .articlesSwiper {
