--- a/scss/main.css
+++ b/scss/main.css
@@ -161,6 +161,16 @@ body {
   transform: translate(40px, -10px);
 }
 
+.swiper-pagination-bullet-active {
+  background-color: var(--black) !important;
+}
+
+.swiper-pagination-bullet {
+  background-color: var(--white);
+  opacity: 1;
+  border: 1px solid var(--black);
+}
+
 :root {
   --first-font: "Tenor Sans", sans-serif;
   --second-font: "Geologica", sans-serif;
@@ -457,6 +467,9 @@ body {
   }
 }
 
+.book1__img {
+  padding: 0 1rem;
+}
 .book1__img img {
   max-width: 31.25rem;
 }
@@ -634,6 +647,9 @@ body {
   }
 }
 
+.book2__img {
+  padding: 0 1rem;
+}
 .book2__img img {
   max-width: 31.25rem;
 }
@@ -665,6 +681,7 @@ body {
 @media only screen and (max-width: 768px) {
   .articles__heading {
     margin-bottom: 1.875rem;
+    text-transform: uppercase;
   }
 }
 
@@ -740,6 +757,7 @@ body {
 @media only screen and (max-width: 768px) {
   .press__heading {
     margin-bottom: 1.875rem;
+    text-transform: uppercase;
   }
 }
 
@@ -749,7 +767,7 @@ body {
 
 .press__slide-text {
   text-align: center;
-  padding: 1.5rem 1rem 2rem;
+  padding: 1.5rem 1rem 1.75rem;
 }
 .press__slide-text h4 {
   font-size: 1.25rem;
@@ -761,7 +779,6 @@ body {
   font-family: var(--second-font);
   font-size: 0.875rem;
   line-height: 130%;
-  margin-bottom: 2rem;
 }
 .press__slide-text a {
   color: var(--red);
@@ -1268,4 +1285,128 @@ body {
 
 .ymaps-2-1-79-copyright__link {
   display: none !important;
+}
+
+.popup {
+  z-index: 999;
+  opacity: 0;
+  pointer-events: none;
+  background-color: rgba(0, 0, 0, 0.5019607843);
+  width: 100%;
+  height: 100%;
+  transition: all 0.4s ease-in-out;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.popup__img {
+  background-image: url(../img/popup-bg.jpg);
+  background-repeat: no-repeat;
+}
+.popup__img img {
+  padding: 5.188rem 8.875rem;
+  width: 100%;
+}
+@media only screen and (max-width: 768px) {
+  .popup__img img {
+    padding: 4.188rem 5.25rem;
+  }
+}
+
+.popup__text {
+  padding: 2rem 1.375rem 1.5rem;
+}
+
+.popup__offer {
+  font-family: var(--second-font);
+  font-weight: 300;
+  font-size: 1rem;
+  line-height: 130%;
+  width: 100%;
+  max-width: 19.938rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.popup__content {
+  max-width: 32.313rem;
+  background-color: var(--white);
+  position: relative;
+}
+
+.popup__head {
+  text-align: center;
+  margin-bottom: 2rem;
+}
+
+.popup__heading {
+  font-size: 1.75rem;
+  line-height: 130%;
+  text-transform: uppercase;
+  margin-bottom: 1rem;
+}
+@media only screen and (max-width: 768px) {
+  .popup__heading {
+    font-size: 1.125rem;
+  }
+}
+
+.popup__close {
+  position: absolute;
+  top: 0;
+  padding: 1.5rem;
+  right: 0;
+}
+
+.popupForm__btn {
+  margin: 1.25rem 0;
+  text-align: center;
+}
+@media only screen and (max-width: 768px) {
+  .popupForm__btn button {
+    width: 100%;
+  }
+}
+
+.popupForm__input {
+  opacity: 0.64;
+  border-bottom: 1px solid var(--black);
+}
+.popupForm__input:nth-of-type(1) {
+  margin-bottom: 1.25rem;
+}
+.popupForm__input input {
+  padding: 0.813rem 0;
+}
+@media only screen and (max-width: 768px) {
+  .popupForm__input {
+    width: 100%;
+  }
+}
+
+.popupForm {
+  display: grid;
+}
+
+.popupForm__agree {
+  font-family: var(--second-font);
+  font-size: 0.625rem;
+  opacity: 0.64;
+  text-align: center;
+}
+.popupForm__agree a {
+  text-decoration: underline;
+  -webkit-text-decoration-skip-ink: none;
+          text-decoration-skip-ink: none;
+  color: var(--black);
+}
+@media only screen and (max-width: 768px) {
+  .popupForm__agree {
+    max-width: 15.5rem;
+    margin: 0 auto;
+  }
 }/*# sourceMappingURL=main.css.map */
