--- a/scss/blocks/_mob-menu.scss
+++ b/scss/blocks/_mob-menu.scss
@@ -1,9 +1,9 @@
 .mob-menu {
-    display: none;
+    // display: none;
     height: 100vh;
-    width: 100%;
     background: var(--red);
     top: 0;
+    right: 0;
     position: fixed; // was absolute
     z-index: 99;
     background-image: url(../img/mob-bg.svg);
@@ -18,6 +18,7 @@
     }
     @media only screen and (max-width: 768px) {
         display: block;
+        width: 100%;
     }
 }
 .mob-menu__content {
