--- a/scss/base/_vars.scss
+++ b/scss/base/_vars.scss
@@ -2,8 +2,12 @@
     --first-font: 'Tenor Sans', sans-serif;
     --second-font: 'Geologica', sans-serif;
     --black: #1E1E1E;
+    --black-hover: rgba(0, 0, 0, 0.4);
+    --black-active: rgba(0, 0, 0, 0.3);
     --white: #FFFFFF;
     --red: #C10A27;
+    --red-hover: #ad0e28;
+    --red-active: #d71c39;
     --green: #44b85c;
     --beige: #F8F8F8;
 }
