--- a/scss/blocks/_articles.scss
+++ b/scss/blocks/_articles.scss
@@ -17,10 +17,18 @@
 }
 .articlesSwiper {
     overflow: hidden;
+    .swiper-slide {
+        height: auto;
+        display: flex;
+        flex-direction: column;
+    }
 }
 .articles__slide-text {
     text-align: center;
     padding: 1.5rem 1rem 2rem;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
     h4 {
         font-size: 1.25rem;
         line-height: 130%;
@@ -39,6 +47,9 @@
         text-underline-offset: 3px;
         text-decoration-skip-ink: none;
     }
+}
+.articles__slide-link {
+    margin-top: auto;
 }
 .articles__content {
     position: relative;
